tests/errors/types/variable-as-generic-base.fn
---
Description: A variable name used as the base of a generic type
Expected: FN3202
---

type Program
{
    static fn Main -> i32
    {
        var x: i32 = 5
        var a: x<i32> = 5
        return 0
    }
}
